SERVER-26488 BSONObj buffer size used by _id index keys should match object size